<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="description_status_pending">Pending</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Error loading data</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="error_saving">Error saving</string>
    <string name="New_publications">New publications</string>
    <string name="remove_photo">Remove photo</string>
    <string name="image_picker_error">Image Picker Error</string>
    <string name="Back">Back</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="confirmation">Confirmation</string>
    <string name="log_in">Log in?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="student" translatable="false">student</string>
    <string name="secret" translatable="false">secret</string>
    <string name="student_name" translatable="false">Студент45</string>
    <string name="student45" translatable="false">student45</string>
    <string name="secret45" translatable="false">secret45</string>
</resources>