<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/student_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student45"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/student_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secret45"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"/>

        <TextView
            android:id="@+id/repeat_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_password"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/student_repeat_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secret45"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"/>

        <Button
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="100dp"
            android:text="@string/sign_up"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>